polishes the FAQ page - switches the source of faq.ad to plain AsciiDoc - fixes outdated and inconsistent URLs - avoids hard-coded version strings improves get-involved.ad for better readability adjusts news.ftl to start with h1 instead of h2

--- a/src/main/jbake/assets/css/custom-style.css
+++ b/src/main/jbake/assets/css/custom-style.css
@@ -35,3 +35,13 @@ body {
 #toc > ul > li > ul {
     padding-inline-start: 1em;
 }
+
+div.qlist.qanda > ol {
+    margin-left: 0;
+    padding-inline-start: 0;
+}
+
+div.qlist.qanda > ol > li {
+    list-style: none;
+    padding-top: .75em;
+}
